Add server userdata to support server configuration and init scripts
