# pkg/openapi/types.go
@@ -192,6 +192,9 @@ type MachinePool struct {
 		// PublicKeys A list of public SSH keys to allow access to the machine.
 		PublicKeys *[]string `json:"publicKeys,omitempty"`
 	} `json:"ssh,omitempty"`
+
+	// UserData UserData contains base64-encoded configuration information or scripts to use upon launch.
+	UserData *[]byte `json:"userData,omitempty"`
 }
 
 // PublicIPAllocation A public IP allocation settings.
